Fixed a HTML issue.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,8 +27,9 @@
 	                	</div>
 	            	</div>
 					
-					<div class="sidebar four-col">                                   
-					    <ul><h3>Recent Posts</h3>
+					<div class="sidebar four-col">
+						<h3>Recent Posts</h3>
+					    <ul>
 							{% for post in site.posts limit:5 %}
 							<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 							{% endfor %}
