--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,8 @@
 				<div class="sidebar four-col">
                 	<h3 class="logo"><a href="http://www.danieltull.co.uk/blog/">Daniel Tull</a></h3>
                 	<div class="sidebar four-col">                                   
-					    <ul><h3>Recent Posts</h3>
+						<h3>Recent Posts</h3>
+					    <ul>
 							{% for post in site.posts limit:5 %}
 							<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 							{% endfor %}
