--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,8 @@
 					</div>
 					
 					<div class="sidebar four-col">
-						<ul><h3>Open Source Code</h3>
+						<h3>Open Source Code</h3>
+						<ul>
 							<li><a href="http://bitbucket.org/danielctull/dtresurrectionkit">Resurrection Kit</a></li>
 							<li><a href="http://bitbucket.org/danielctull/dtnibhook">DTNibHook</a></li>
 							<li><a href="http://bitbucket.org/danielctull/dtgridview/">DTGridView</a></li>
@@ -47,14 +48,16 @@
 					</div>
 					
 					<div class="sidebar four-col">
-					    <ul><h3>Apps I've worked on</h3>
+						<h3>Apps I've worked on</h3>
+					    <ul>
 					        <li><a href="http://www.weathermapsapp.com/">Weather Maps</a></li>
 					        <li><a href="http://itunes.apple.com/gb/app/sky/id301250225?mt=8">Sky+</a></li>
 					    </ul>
 					</div>
 
 					<div class="sidebar four-col last-col">
-					    <ul><h3>All About Me</h3>
+						<h3>All About Me</h3>
+					    <ul>
 					        <li><a href="http://www.danieltull.co.uk/contact/">Contact Details</a></li>
 					    </ul>
 					</div>
