--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,14 +31,16 @@
 					</div>
 
 					<div class="sidebar four-col">
-					    <ul><h3>Apps I've worked on</h3>
+						<h3>Apps I've worked on</h3>
+					    <ul>
 					        <li><a href="http://www.weathermapsapp.com/">Weather Maps</a></li>
 					        <li><a href="http://itunes.apple.com/gb/app/sky/id301250225?mt=8">Sky+</a></li>
 					    </ul>
 					</div>
 
 					<div class="sidebar four-col last-col">
-					    <ul><h3>All About Me</h3>
+						<h3>All About Me</h3>
+					    <ul>
 					        <li><a href="http://www.danieltull.co.uk/contact/">Contact Details</a></li>
 					    </ul>
 					</div>            
