More HTML fixes.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,8 @@
 					</div>
 
 					<div class="sidebar four-col">
-						<ul><h3>Open Source Code</h3>
+						<h3>Open Source Code</h3>
+						<ul>
 							<li><a href="http://bitbucket.org/danielctull/dtresurrectionkit">Resurrection Kit</a></li>
 							<li><a href="http://bitbucket.org/danielctull/dtnibhook">DTNibHook</a></li>
 							<li><a href="http://bitbucket.org/danielctull/dtgridview/">DTGridView</a></li>
