--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@
 						<ul>
 							
 							{% for title in site.opensourcenames %}
-							<li><a href="{{ opensourceurls[forloop.index] }}">{{ title }}</a></li>
+							<li><a href="{{ site.opensourceurls[forloop.index] }}">{{ title }}</a></li>
 							{% endfor %}
 					    </ul>
 					</div>
