--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,13 +37,11 @@
 					</div>
 					
 					<div class="sidebar four-col">
-						<h3>Open Source Code</h3>
+						<h3>{{ opensourcetitle }}</h3>
 						<ul>
-							<li><a href="http://bitbucket.org/danielctull/dtresurrectionkit">Resurrection Kit</a></li>
-							<li><a href="http://bitbucket.org/danielctull/dtnibhook">DTNibHook</a></li>
-							<li><a href="http://bitbucket.org/danielctull/dtgridview/">DTGridView</a></li>
-					        <li><a href="http://bitbucket.org/danielctull/dtkit/">DTKit</a></li>
-					        <li><a href="http://bitbucket.org/danielctull/dtmusicmodel/">DTMusicModel</a></li>
+							{% for title in site.opensourcenames %}
+							<li><a href="{{ site.opensourceurls[forloop.index0] }}">{{ title }}</a></li>
+							{% endfor %}
 					    </ul>
 					</div>
 					
