Fixing for the globals.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@
 					</div>
 					
 					<div class="sidebar four-col">
-						<h3>{{ opensourcetitle }}</h3>
+						<h3>{{ site.opensourcetitle }}</h3>
 						<ul>
 							{% for title in site.opensourcenames %}
 							<li><a href="{{ site.opensourceurls[forloop.index0] }}">{{ title }}</a></li>
