--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
 			<div id="inner-wrapper" class="page inner-wrapper">
             
 				<div class="sidebar four-col">
-                	<h3 class="logo"><a href="http://www.danieltull.co.uk/blog/">Daniel Tull</a></h3>
+                	<h3 class="logo"><a href="/">Daniel Tull</a></h3>
                 	<div class="sidebar four-col">                                   
 						<h3>Recent Posts</h3>
 					    <ul>
