Trying to get the post title to show.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,7 @@
 				
 				<div class="twelve-col last-col">
 					<div class="post main-text">
-						<h1 id="{{ post.id }}">{{ post.title }}</h1>
+						<h1 id="">{{ post.title }}</h1>
 						<h5>{{ post.date }}</h5>
 						{{ content }}
 					</div>
