--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ blockquote {
 	padding: 0px 20px;
 }
 
-.sidebar ul h3 {
+.sidebar h3 {
     background: #EAE2D1;
     border: solid 1px #CEC8B9;
     text-align:center;
