--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
 	                	</div>
 	            	</div>
 					
-					<div class="sidebar four-col">
+					<div class="sidebar section four-col">
 						<h3>Recent Posts</h3>
 					    <ul>
 							{% for post in site.posts limit:5 %}
