--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 blockquote,
 pre,
-.sidebar ul {
+.sidebar.section {
     background: #fff;
     border: solid 1px #E8E5DA;
     -webkit-border-radius: 5px;
@@ -25,7 +25,7 @@ blockquote {
 	padding: 0px 20px;
 }
 
-.sidebar h3 {
+.section h3 {
     background: #EAE2D1;
     border: solid 1px #CEC8B9;
     text-align:center;
