--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,13 +24,15 @@
 	                	</div>
 	            	</div>
 					
-					<div class="sidebar section four-col">
-						<h3>Recent Posts</h3>
-					    <ul>
-							{% for post in site.posts limit:5 %}
-							<li><a href="{{ post.url }}">{{ post.title }}</a></li>
-							{% endfor %}
-						</ul>
+					<div class="sidebar four-col">
+						<div class="section">
+							<h3>Recent Posts</h3>
+					    	<ul>
+								{% for post in site.posts limit:5 %}
+									<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+								{% endfor %}
+							</ul>
+						</div>
 					</div>
 					
 					<div class="sidebar four-col">
