--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
                 	<h3 class="logo"><a href="/">Daniel Tull</a></h3>
 
 					<div class="section">
-						<h3>Recent Posts</h3>
+						<h3><a href="/archive/">Recent Posts</a></h3>
 				    	<ul>
 							{% for post in site.posts limit:5 %}
 								<li><a href="{{ post.url }}">{{ post.title }}</a></li>
