--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@
 				<div class="header twelve-col last-col">
 					<ul>{{ site.servicetitle }}
 						{% for title in site.servicenames %}
-						<li><a href="{{ site.serviceurls[forloop.index0] }}">{{ title }}</a></li>
+						<li><a href="{{ site.serviceurls[forloop.index0] }}">{{ title }}</a>{% if forloop.last == false %},{% endif %}</li>
 						{% endfor %}
 					</ul>
 				</div>
