--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,8 +59,8 @@
 				
 				<div class="twelve-col last-col">
 					<div class="post main-text">
-						<h1>{{ title }}</h1>
-						<h5>{{ date | date_to_long_string }}</h5>
+						<h1>{{ page.title }}</h1>
+						<h5>{{ page.date | date_to_long_string }}</h5>
 						{{ content }}
 					</div>
 				</div>
