--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,12 +48,7 @@
 					
 					<div class="sidebar four-col">
 						<div class="section">
-							<h3>{{ site.apptitle }}</h3>
-				    		<ul>
-								{% for title in site.appnames %}
-									<li><a href="{{ site.appurls[forloop.index0] }}">{{ title }}</a></li>
-								{% endfor %}
-					    	</ul>
+							{% include apps.html %}
 						</div>
 					</div>
 
