--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,12 +10,9 @@
 		<div id="wrapper" class="wrapper">
 			<div id="inner-wrapper" class="inner-wrapper">
 				<div class="page sixteen-col">
+					
 					<div class="header sixteen-col last-col">
-						<ul>{{ site.servicetitle }}
-							{% for title in site.servicenames %}
-							<li><a href="{{ site.serviceurls[forloop.index0] }}">{{ title }}</a>{% if forloop.last == false %},{% endif %}</li>
-							{% endfor %}
-						</ul>
+						{% include servicesmenu.html %}
 					</div>
 					
 					<div class="sixteen-col last-col">
@@ -26,23 +23,13 @@
 					
 					<div class="sidebar four-col">
 						<div class="section">
-							<h3>Recent Posts</h3>
-					    	<ul>
-								{% for post in site.posts limit:5 %}
-									<li><a href="{{ post.url }}">{{ post.title }}</a></li>
-								{% endfor %}
-							</ul>
+							{% include recentpostsmenu.html %}
 						</div>
 					</div>
 					
 					<div class="sidebar four-col">
 						<div class="section">
-							<h3>{{ site.opensourcetitle }}</h3>
-							<ul>
-								{% for title in site.opensourcenames %}
-									<li><a href="{{ site.opensourceurls[forloop.index0] }}">{{ title }}</a></li>
-								{% endfor %}
-					    	</ul>
+							{% include opensource.html %}
 						</div>
 					</div>
 					
@@ -54,14 +41,10 @@
 
 					<div class="sidebar four-col last-col">
 						<div class="section">
-							<h3>{{ site.abouttitle }}</h3>
-					    	<ul>
-								{% for title in site.aboutnames %}
-									<li><a href="{{ site.abouturls[forloop.index0] }}">{{ title }}</a></li>
-								{% endfor %}
-					    	</ul>
+							{% include aboutmenu.html %}
 						</div>
 					</div>
+					
 				</div>
 			</div>
 		</div>
