Reverted to the old way, probably should change this at some point.

--- a/_includes/servicesmenu.html
+++ b/_includes/servicesmenu.html
@@ -1,4 +1,4 @@
-Find me on <ul>
+<ul>Find me on 
     <li><a href="http://www.twitter.com/danielctull">Twitter</a>,</li>
     <li><a href="http://bitbucket.org/danielctull/">BitBucket</a>,</li>
     <li><a href="http://stackoverflow.com/users/155863/daniel-tull">Stack Overflow</a>,</li>
