Using the right names for the includes files.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,13 +29,13 @@
 					
 					<div class="sidebar four-col">
 						<div class="section">
-							{% include opensource.html %}
+							{% include opensourcemenu.html %}
 						</div>
 					</div>
 					
 					<div class="sidebar four-col">
 						<div class="section">
-							{% include apps.html %}
+							{% include appsmenu.html %}
 						</div>
 					</div>
 
