Added the footer.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,8 +46,13 @@
 					</div>
 					
 				</div>
+				
+				
+				<div class="footer sixteen-col">
+					{% include footer.html %}
+				</div>
+				
 			</div>
 		</div>
 	</body>
-
 </html>
