--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,11 @@
 						{{ content }}
 					</div>
 				</div>
+				
+				<div class="footer sixteen-col">
+					{% include footer.html %}
+				</div>
+				
 			</div>
 		</div>
   	</body>
