--- a/_includes/recentpostsmenu.html
+++ b/_includes/recentpostsmenu.html
@@ -3,4 +3,5 @@
 	{% for post in site.posts limit:5 %}
 		<li><a href="{{ post.url }}">{{ post.title }}</a></li>
 	{% endfor %}
+	<li class="more"><a href="/archive/">Archive</a></li>
 </ul>
