--- a/_includes/recentpostsmenu.html
+++ b/_includes/recentpostsmenu.html
@@ -1,4 +1,4 @@
-<h3>Recent Posts</h3>
+<h3>Previous Posts</h3>
 <ul>
 	{% for post in site.posts limit:5 %}
 		<li><a href="{{ post.url }}">{{ post.title }}</a></li>
