--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@
 				<div class="twelve-col last-col">
 					<div class="post main-text">
 						<h1>{{ page.title }}</h1>
-						<h5>{{ page.date | date: "%A, %d %B %Y" }}</h5>
+						<h5 class="postdate">{{ page.date | date: "%A, %d %B %Y" }}</h5>
 						{{ content }}
 					</div>
 				</div>
