--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,14 @@ h1 {
     margin-top: 0;
 }
 
+.post h5 {
+	margin-top: 2em;
+}
+
+.post h5.postdate {
+	margin-top: 1em;
+}
+
 h1, h2, h3, h4, h5, h6 {
     text-shadow: rgba(255,255,255,0.8) 1px 1px 0px;
     font-family: 'Museo500', san-serif;
