Added project info title to project css.

--- a/css/projects.css
+++ b/css/projects.css
@@ -8,4 +8,9 @@
 .projecttitle {
 	text-shadow: rgba(255,255,255,0.8) 1px 1px 0px;
     font-family: 'Museo500', san-serif;
+	text-align: right;
+}
+
+p.infotitle {
+	font-family: 'Museo500', san-serif;
 }
