--- a/css/projects.css
+++ b/css/projects.css
@@ -8,6 +8,7 @@
 .projecttitle {
 	text-shadow: rgba(255,255,255,0.8) 1px 1px 0px;
     font-family: 'Museo500', san-serif;
+	text-align: center;
 }
 
 p.infotitle {
