--- a/_includes/servicesmenu.html
+++ b/_includes/servicesmenu.html
@@ -1,6 +1,6 @@
 <ul>Find me on 
     <li><a href="http://twitter.com/danielctull">Twitter</a>,</li>
-    <li><a href="http://github.com/danielctull">Github</a>,</li>
+    <li><a href="http://github.com/danielctull">GitHub</a>,</li>
     <li><a href="http://stackoverflow.com/users/155863/daniel-tull">Stack Overflow</a>,</li>
     <li><a href="http://google.com/reader/shared/06047137066122335809">Google Reader</a>,</li>
     <li><a href="http://flickr.com/photos/18319588@N00/">Flickr</a>,</li>
