--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<p>&copy;2010 Daniel Tull. Completeley <a href="http://gridinator.com/">Gridinated</a>. Design inspiration from <a href="http://steffanwilliams.co.uk/">Steffan Williams</a>.</p>
+<p>&copy;2010 Daniel Tull. Completely <a href="http://gridinator.com/">Gridinated</a>.</p>
