Edit CSS locations.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>{{ site.name }}</title>
-		<link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="/fonts/museo/stylesheet.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="fonts/museo/stylesheet.css" type="text/css" media="screen" />
 		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/DanielTull" />
 		<link rel="service.feed" type="application/atom+xml" title="Atom" href="http://feeds.feedburner.com/DanielTull" />
 	</head>
