Add Penki app link.

--- a/_includes/appsmenu.html
+++ b/_includes/appsmenu.html
@@ -1,7 +1,8 @@
 <h3>Apps I've worked on</h3>
 <ul>
-	<li><a href="http://itunes.apple.com/gb/app/tint-calc/id400082124?mt=8">Tint Calc</a></li>
-	<li><a href="http://itunes.apple.com/gb/app/pocket-gok-christmas-2010/id401621756?mt=8">Pocket Gok: Christmas 2010</a></li>
+	<li><a href="http://itunes.apple.com/app/penki/id402699957">Penki</a></li>
+	<li><a href="http://itunes.apple.com/app/tint-calc/id400082124">Tint Calc</a></li>
+	<li><a href="http://itunes.apple.com/app/pocket-gok-christmas-2010/id401621756">Pocket Gok: Christmas 2010</a></li>
 	<li><a href="http://www.weathermapsapp.com/">Weather Maps</a></li>
-	<li><a href="http://itunes.apple.com/gb/app/sky/id301250225?mt=8">Sky+</a></li>
+	<li><a href="http://itunes.apple.com/app/sky/id301250225">Sky+</a></li>
 </ul>
