Move the css and fonts folder to a style folder

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <title>{{ site.name }}</title>
-<link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="/fonts/museo/stylesheet.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="/style/css/style.css" type="text/css" media="screen" />
 </head>
 
 <body>
