--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<p>&copy;2010 Daniel Tull. Completely <a href="http://gridinator.com/">Gridinated</a>.</p>
+<p>&copy; Daniel Tull. Completely <a href="http://gridinator.com/">Gridinated</a>.</p>
