--- a/_includes/opensourcemenu.html
+++ b/_includes/opensourcemenu.html
@@ -1,9 +1,7 @@
 <h3>Open Source Code</h3>
 <ul>
 	<li><a href="http://github.com/danielctull/Fourgy">Fourgy</a></li>
-	<li><a href="http://github.com/danielctull/DCTConnectionController">DCTConnectionController</a></li>
-	<li><a href="http://github.com/danielctull/DCTCoreData">DCTCoreData</a></li>
-	<li><a href="http://github.com/danielctull/DCTUIKit">DCTUIKit</a></li>
-	<li><a href="http://github.com/danielctull/DCTFoundation">DCTFoundation</a></li>
+	<li><a href="http://github.com/danielctull/DCTAuth">DCTAuth</a></li>
+	<li><a href="http://github.com/danielctull/DCTCoreDataStack">DCTCoreDataStack</a></li>
 	<li class="more"><a href="/code/">Source Code Overview</a></li>
 </ul>
