--- a/_includes/appsmenu.html
+++ b/_includes/appsmenu.html
@@ -1,8 +1,6 @@
-<h3>Apps I've worked on</h3>
+<h3>Recent Apps</h3>
 <ul>
-	<li><a href="http://itunes.apple.com/app/penki/id402699957">Penki</a></li>
-	<li><a href="http://itunes.apple.com/app/tint-calc/id400082124">Tint Calc</a></li>
-	<li><a href="http://itunes.apple.com/app/pocket-gok-christmas-2010/id401621756">Pocket Gok: Christmas 2010</a></li>
+	<li><a href="https://itunes.apple.com/gb/app/mailonline-mini/id587463123?mt=8">MailOnline Mini</a></li>
+	<li><a href="https://itunes.apple.com/gb/app/coordination-location-utility/id625226776?mt=8">Coordination</a></li>
 	<li><a href="http://www.weathermapsapp.com/">Weather Maps</a></li>
-	<li><a href="http://itunes.apple.com/app/sky/id301250225">Sky+</a></li>
 </ul>
