Add Easier merging of Xcode project files post

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -2,6 +2,7 @@
 
 @import url("gridinator.css");
 @import url("../fonts/museo/stylesheet.css");
+@import url("textmate.css");
 
 body {
     background: #F5F3ED;
