Update beta style

--- a/beta/style.css
+++ b/beta/style.css
@@ -103,6 +103,10 @@ div.page {
     text-align: center;
 }
 
+pre {
+    overflow-x: scroll;
+}
+
 .date {
     font-weight: 200;  
     margin: 1em 0;     
