--- a/beta/list.css
+++ b/beta/list.css
@@ -11,14 +11,17 @@ ul.archive li {
     color: #333;
 }
 
-ul.archive a {
-}
-
 ul.archive .date {
     font-weight: 400;
     display: block;
     text-align: left;
     margin:0;
+}
+
+ul.archive .title,
+ul.archive .extra {
+    font-weight: 300;
+    font-size: 1.5em;
 }
 
 ul.archive .extra {
