Update icon locations

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@
 		<meta name="author" content="Daniel Tull">
 		<meta name="keywords" content="freelance,contract,ios,mac,developer,apps,london,uk">
 		<link rel="stylesheet" href="style/css/style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="style/css/home.css" type="text/css" media="screen" />
 		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/DanielTull" />
 		<link rel="service.feed" type="application/atom+xml" title="Atom" href="http://feeds.feedburner.com/DanielTull" />
 	</head>
@@ -21,11 +22,11 @@
 		<div class="page">
             <div class="hero">
                 <a class="app" href="http://danieltull.co.uk/issues">
-    				<img src="images/Issues.svg" /> 
+    				<img src="images/app-icons/Issues.svg" /> 
     				<h1>Issues</h1>
     			</a>
     			<a class="app" href="http://danieltull.co.uk/coordination">
-    				<img src="images/Coordination.svg" /> 
+    				<img src="images/app-icons/Coordination.svg" /> 
     				<h1>Coordination</h1>
     			</a>
             </div>
