--- a/style/css/style.css
+++ b/style/css/style.css
@@ -24,18 +24,18 @@ a:hover {
 
 /** CUSTOM BULLETS */
 
-.main ul {
+.main ul.list {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.main ul li {
+.main ul.list li {
   padding-left: 1em;
   text-indent: -0.7em;
 }
 
-.main ul li:before {
+.main ul.list li:before {
   content: "\002022  ";
   color: #FF7F00;
 }
