--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,8 @@
 		<div class="header page">
             <h1><a href="home.html">Daniel Tull</a>: Blog</h1>
 		</div>
+		
+		{% include menu.html %}
 
 		<div class="main page">
 			<h1>{{ page.title }}</h1>
