--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@
 	<body>
 		
 		<div class="header page">
-            <h1><a href="home.html">Daniel Tull</a>: {{ page.title }}</h1>
+            <h1><a href="/">Daniel Tull</a>: {{ page.title }}</h1>
 		</div>
 		
 		{% include menu.html %}
