--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
 		{% include menu.html %}
 		
 		<div class="welcome page">
-			{% page.content %}
+			{% content %}
 		</div>
 		
 		<div class="page">
