--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@
 		<meta name="description" content="Daniel Tull is a freelance developer from Guildford, UK, working on iOS and Mac apps for clients such as Sky, BBC, Tesco and Gok Wan.">
 		<meta name="author" content="Daniel Tull">
 		<meta name="keywords" content="freelance,contract,ios,mac,developer,apps,london,uk">
+		<meta name="viewport" content="user-scalable=no, width=device-width">
 		<link rel="stylesheet" href="/style/css/style.css" type="text/css" media="screen" />
 		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/DanielTull" />
 		<link rel="service.feed" type="application/atom+xml" title="Atom" href="http://feeds.feedburner.com/DanielTull" />
