Change the Coordination link to the app store

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
     				<img src="images/app-icons/Issues.svg" /> 
     				<h1>Issues</h1>
     			</a>
-    			<a class="app" href="http://danieltull.co.uk/coordination">
+    			<a class="app" href="http://danieltull.co.uk/to/coordination">
     				<img src="images/app-icons/Coordination.svg" /> 
     				<h1>Coordination</h1>
     			</a>
