--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,8 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400);
 
 html {
 	color: #000;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: -apple-system, "Helvetica Neue", sans-serif;
 }
 
 .highlight {
