Add Workouts link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,6 +26,10 @@
     				<img src="images/app-icons/Issues.svg" /> 
     				<h1>Issues</h1>
     			</a>
+                <a class="app" href="http://danieltull.co.uk/workouts">
+    				<img src="images/app-icons/Workouts.svg" /> 
+    				<h1>Workouts</h1>
+    			</a>
     			<a class="app" href="http://danieltull.co.uk/to/coordination">
     				<img src="images/app-icons/Coordination.svg" /> 
     				<h1>Coordination</h1>
