Update presentations title

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
 	<div class="page">
 		<ul>
 			<li><a href="/blog/">Blog</a></li>
-            <li><a href="/presentations/">Talks</a></li>
+            <li><a href="/presentations/">Presentations</a></li>
 			<li><a href="/contact/">Contact</a></li>
 		</ul>
 	</div>
